--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "onepage-scroll",
-  "version": "1.3.3",
-  "author": "Pete R",
+  "version": "1.3.4",
+  "author": "Pete R, Ben J",
   "main": [
     "jquery.onepage-scroll.js",
     "onepage-scroll.css"
